# PDE4430

./: .gitignore  README.md  frames_2025-12-06_22.13.14.gv  frames_2025-12-06_23.03.29.gv
src/assessment_world/: CMakeLists.txt
src/assessment_world/ros2_assessment_world-main/: README.md  package.xml
src/assessment_world/ros2_assessment_world-main/launch/: assessment_complete.launch.py  assessment_world.launch.py  spawn_spheres.launch.py
src/assessment_world/ros2_assessment_world-main/scripts/: spawn_spheres.py
src/assessment_world/ros2_assessment_world-main/worlds/: assessment.sdf
src/my_bot_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/my_bot_control/config/: my_bot_controllers.yaml
src/my_bot_control/my_bot_control/: flap_teleop.py  flap_teleop_gz.py
src/my_bot_description/: CMakeLists.txt  package.xml
src/my_bot_description/launch/: bringup.launch.py  display.launch.py  spawn_my_bot.launch.py
src/my_bot_description/urdf/: my_bot.urdf.xacro  my_bot.urdf.xacro'
src/my_bot_teleop/: package.xml  setup.cfg  setup.py
src/my_bot_teleop/launch/: keyboard_teleop.launch.py
